fix header on mobile

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   color: $white;
+  overflow: hidden;
   position: relative;
   z-index: 0;
 
